--- a/Veterinaria Moka/css/estilos.css
+++ b/Veterinaria Moka/css/estilos.css
@@ -400,6 +400,7 @@ th {
 #tbl-usuarios th {
     font-weight: 700;
     text-transform: uppercase;
+    padding: 0;
 }
 
 #tbl-usuarios td {
@@ -959,4 +960,17 @@ select {
 
 #form-derecha {
     margin-bottom: 25px;
+}
+
+#foto-usuario {
+    display: block;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    border: 2px solid #2F3E46;
+    background-image: url('../imagenes/moka-profile.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 20px auto;
 }
